# congenial-garbanzo

./: .gitmodules  Makefile  README.md  docker-compose.yml  go.mod  load.artillery.yml
bastion/: Dockerfile  Makefile  go.mod  go.sum  main.go
bastion/api/spec/: echo.pb.go  echo.pb.gw.go
core/: Cargo.toml  Dockerfile  build.rs
core/src/: main.rs
edge/: Dockerfile  index.js  package-lock.json  package.json
spec/: Dockerfile  echo.proto
spec/scripts/: install_proto.sh
