[package]
name = "core"
version = "0.1.0"
authors = ["EarvinKayonga <demoneartin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure             = "^0.1"
prost               = "0.6"
tonic               = { version = "^0.3", features = ["tls"] }
tokio               = { version = "^0.2", features = ["macros"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator        = { version = "^0.3.2",  optional = true }

[target.'cfg(target_env = "msvc")'.dependencies]
mimalloc            = { version = "^0.1.18", default-features = false,  optional = true }

[build-dependencies]
failure             = "^0.1"
tonic-build         = "^0.3"